[project]
name = "multi-agent-rag-customer-support"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.9.0"
]

[tool.vercel]
entrypoint = "api:app"
